--- a/portfolio-details_9.html
+++ b/portfolio-details_9.html
@@ -21,6 +21,32 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #1a1a1a;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin: 1rem 0;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .section {
+      margin-bottom: 2.5rem;
+    }
+  </style>
 </head>
 
 <body>
@@ -31,36 +57,92 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="row gy-4">
+         <h1>ParkingOn Go App – UX Case Study</h1>
 
-          <div class="col-lg-12">
-            <div class="portfolio-details-slider swiper" style="width: 50%;",
-    "height: 100vh;",
-    "overflow-y: auto;">
-              <div class="swiper-wrapper align-items-center">
+  <div class="section">
+    <h2>Summary</h2>
+    <p>ParkingOn Go is a B2C app designed to solve the real-world problem of finding car parking in busy office areas. This project explores a user-centered approach to improve parking experiences for professionals, minimize stress, and optimize efficiency during commutes.</p>
+  </div>
 
-                <div class="swiper-slide">
-                  <img src="img/portfolio/EV.png" alt="">
-                </div>
+  <div class="section">
+    <h2>Problem Statement</h2>
+    <p>Office-goers face a daily struggle to find parking near workspaces. The lack of real-time availability data and poor signage often results in frustration, violations, and time loss. A smart solution was needed to ease this burden and provide a seamless experience.</p>
+  </div>
 
-                <div class="swiper-slide">
-                  <img src="img/portfolio/EV-2.png" alt="">
-                </div>
-                
-                 <div class="swiper-slide">
-                  <img src="img/portfolio/EV-3.png" alt="">
-                </div>
-                
-                 <div class="swiper-slide">
-                  <img src="img/portfolio/EV-4.png" alt="">
-                </div>
+  <div class="section">
+    <h2>Research Approach</h2>
+    <ul>
+      <li>Customer Interviews</li>
+      <li>Market Analysis</li>
+      <li>Persona Development</li>
+      <li>Customer Journey Mapping</li>
+      <li>Information Architecture</li>
+      <li>Prototyping</li>
+    </ul>
+    <p>We researched the behavior of daily commuters, validated the business model, and gathered user pain points to drive the design direction.</p>
+  </div>
 
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
+  <div class="section">
+    <h2>User Persona: Alex Parker</h2>
+    <p><strong>Age:</strong> 32 &nbsp; <strong>Occupation:</strong> Marketing Executive &nbsp; <strong>Location:</strong> Suburbs, Germany</p>
+    <p>Alex commutes daily by car due to limited public transport. He often experiences stress while finding a parking spot near his office. His expectations include real-time parking availability, contactless payments, and intuitive app features.</p>
+  </div>
 
-        </div>
+  <div class="section">
+    <h2>Pain Points</h2>
+    <ul>
+      <li>Scarcity of parking spots</li>
+      <li>Time wasted in circling lots</li>
+      <li>Parking fines from unclear regulations</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Goals & Needs</h2>
+    <ul>
+      <li>Real-time info on available spots</li>
+      <li>Navigation to nearest parking</li>
+      <li>Cashless payment methods</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Empathy Map</h2>
+    <p><strong>Says:</strong> "I hope I find parking on time."</p>
+    <p><strong>Thinks:</strong> "I wish there was a better way to know where parking is available."</p>
+    <p><strong>Does:</strong> Drives around, checks apps.</p>
+    <p><strong>Feels:</strong> Stressed, frustrated, relieved (on finding spot).</p>
+  </div>
+
+  <div class="section">
+    <h2>Prototyping & Storyboard</h2>
+    <p>We storyboarded Alex’s journey from leaving home to successfully parking using the app. Highlights include:</p>
+    <ul>
+      <li>Frustration during parking hunt</li>
+      <li>Discovering app and viewing live parking availability</li>
+      <li>Using filters to select covered/EV-compatible spots</li>
+      <li>Navigation to spot and seamless in-app payment</li>
+      <li>Sharing positive experience at work</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Wireframes</h2>
+    <p>Low-fidelity wireframes explored user flow and layout simplicity before moving to medium fidelity and interactive prototypes.</p>
+    <img src="images/parking_lowfi_1.png" alt="Low Fidelity Wireframe 1">
+    <img src="images/parking_lowfi_2.png" alt="Low Fidelity Wireframe 2">
+    <img src="images/parking_lowfi_3.png" alt="Low Fidelity Wireframe 3">
+  </div>
+
+  <div class="section">
+    <h2>User Flow & Information Architecture</h2>
+    <p>Designed with clear hierarchy, intuitive steps from location search to payment confirmation. Grid layout and spacing optimized for visibility and quick actions.</p>
+  </div>
+
+  <div class="section">
+    <h2>Conclusion</h2>
+    <p>The ParkingOn Go App addresses real urban pain points through human-centered design, thoughtful flows, and modern tech. Alex’s story became the basis for solving similar user journeys citywide.</p>
+  </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
