--- a/portfolio-details_9.html
+++ b/portfolio-details_9.html
@@ -63,6 +63,8 @@
     <h2>Summary</h2>
     <p>ParkingOn Go is a B2C app designed to solve the real-world problem of finding car parking in busy office areas. This project explores a user-centered approach to improve parking experiences for professionals, minimize stress, and optimize efficiency during commutes.</p>
   </div>
+        <br>
+         <img src="img/UX4.png" alt="Summary design">
 
   <div class="section">
     <h2>Problem Statement</h2>
@@ -87,6 +89,7 @@
     <p><strong>Age:</strong> 32 &nbsp; <strong>Occupation:</strong> Marketing Executive &nbsp; <strong>Location:</strong> Suburbs, Germany</p>
     <p>Alex commutes daily by car due to limited public transport. He often experiences stress while finding a parking spot near his office. His expectations include real-time parking availability, contactless payments, and intuitive app features.</p>
   </div>
+        <img src="img/UX5.png" alt="Summary design">
 
   <div class="section">
     <h2>Pain Points</h2>
@@ -125,6 +128,13 @@
       <li>Sharing positive experience at work</li>
     </ul>
   </div>
+        <div class="section">
+    <h2>User Flow & Information Architecture</h2>
+    <p>Designed with clear hierarchy, intuitive steps from location search to payment confirmation. Grid layout and spacing optimized for visibility and quick actions.</p>
+  </div>
+        <img src="img/UX6.png" alt="Summary design">
+        <img src="img/UX7.png" alt="Summary design">
+        <img src="img/UX8.png" alt="Summary design">
 
   <div class="section">
     <h2>Wireframes</h2>
@@ -133,11 +143,8 @@
     <img src="images/parking_lowfi_2.png" alt="Low Fidelity Wireframe 2">
     <img src="images/parking_lowfi_3.png" alt="Low Fidelity Wireframe 3">
   </div>
-
-  <div class="section">
-    <h2>User Flow & Information Architecture</h2>
-    <p>Designed with clear hierarchy, intuitive steps from location search to payment confirmation. Grid layout and spacing optimized for visibility and quick actions.</p>
-  </div>
+        <img src="img/UX9.png" alt="Summary design">
+         <img src="img/UX10.png" alt="Summary design">
 
   <div class="section">
     <h2>Conclusion</h2>
