--- a/portfolio-details_9.html
+++ b/portfolio-details_9.html
@@ -132,19 +132,16 @@
     <h2>User Flow & Information Architecture</h2>
     <p>Designed with clear hierarchy, intuitive steps from location search to payment confirmation. Grid layout and spacing optimized for visibility and quick actions.</p>
   </div>
-        <img src="img/UX6.png" alt="Summary design">
-        <img src="img/UX7.png" alt="Summary design">
-        <img src="img/UX8.png" alt="Summary design">
+        <img src="img/UX6.png" alt="user flow">
+        <img src="img/UX7.png" alt="IA Diagram">
+        <img src="img/UX8.png" alt="Empthay Mapping">
 
   <div class="section">
     <h2>Wireframes</h2>
     <p>Low-fidelity wireframes explored user flow and layout simplicity before moving to medium fidelity and interactive prototypes.</p>
-    <img src="images/parking_lowfi_1.png" alt="Low Fidelity Wireframe 1">
-    <img src="images/parking_lowfi_2.png" alt="Low Fidelity Wireframe 2">
-    <img src="images/parking_lowfi_3.png" alt="Low Fidelity Wireframe 3">
+    <img src="img/UX9.png" alt="high Fidelity Wireframe 1">
+    <img src="img/UX10.png" alt="high Fidelity Wireframe 2">
   </div>
-        <img src="img/UX9.png" alt="Summary design">
-         <img src="img/UX10.png" alt="Summary design">
 
   <div class="section">
     <h2>Conclusion</h2>
