--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -57,7 +57,7 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <h1>Optimizing Truck Traffic Management on Terminal Level</h1>
+        <h1>Optimizing Truck Traffic Management on Terminal Level</h1><br>
 
   <div class="section">
     <h2>📄 Project Overview</h2>
@@ -94,6 +94,7 @@
       <li>Minimal learning curve.</li>
     </ul>
   </div>
+         <img src="images/user_research_terminal_pie_chart.png" alt="Pie chart for research">
 
   <div class="section">
     <h2>User Persona</h2>
