--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -57,10 +57,11 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <h1>Optimizing Truck Traffic Management on Terminal Level</h1><br>
+        <h1>Optimizing Truck Traffic Management on Terminal Level</h1>
+        <br>
 
   <div class="section">
-    <h2>📄 Project Overview</h2>
+    <h2>Project Overview</h2>
     <p>This project aimed to create a centralized platform for managing truck traffic between terminals, removing manual bottlenecks and streamlining scheduling for a major transportation company.</p>
   </div>
 
@@ -190,11 +191,7 @@
     <p>The platform improved on-ground logistics by digitizing truck traffic planning. With a central dashboard, configurable terminal flows, and real-time tracking, the system reduced miscommunication and improved delivery timelines across the network.</p>
   </div>
 
-
-
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
