--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -95,7 +95,7 @@
       <li>Minimal learning curve.</li>
     </ul>
   </div>
-         <img src="images/user_research_terminal_pie_chart.png" alt="Pie chart for research">
+         <img src="img/user_research_terminal_pie_chart.png" alt="Pie chart for research">
 
   <div class="section">
     <h2>User Persona</h2>
@@ -105,7 +105,7 @@
        <strong>Pain Points:</strong> Delay in updates, lack of unified view, inefficient manual tracking.
     </p>
   </div>
-          <img src="images/truck_persona.png" alt="User Persona">
+          <img src="img/truck_persona.png" alt="User Persona">
 
   <div class="section">
     <h2>Information Architecture</h2>
@@ -116,7 +116,7 @@
       <li>Customizable input for distances and ETA/ATA data.</li>
     </ul>
   </div>
-           <img src="images/IADB.png" alt="IA Diagram">
+           <img src="img/IADB.png" alt="IA Diagram">
 
   <div class="section">
     <h2>Wireframes & UX Design</h2>
