--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -213,7 +213,7 @@
    
   <script src="js/main.js"></script>
  <!-- Template Main JS File>-->
-  <script>
+  <!--<script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -240,7 +240,7 @@
         }
     }
  
-</script>
+</script>-->
 
 </body>
 
