--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -99,8 +99,8 @@
 
   <div class="section">
     <h2>User Persona</h2>
-    <p><strong>Name:</strong> Ravi Sharma<br>
-       <strong>Role:</strong> Terminal Logistics Coordinator<br>
+    <p><strong>Name:</strong> Davis Miller<br>
+       <strong>Role:</strong> Logistics Coordinator<br>
        <strong>Goals:</strong> Streamline truck scheduling between terminals without paperwork or phone calls.<br>
        <strong>Pain Points:</strong> Delay in updates, lack of unified view, inefficient manual tracking.
     </p>
@@ -213,7 +213,7 @@
    
   <script src="js/main.js"></script>
  <!-- Template Main JS File>-->
-  <!--<script>
+  <script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -240,7 +240,7 @@
         }
     }
  
-</script>-->
+</script>
 
 </body>
 
