--- a/index.html
+++ b/index.html
@@ -382,7 +382,6 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
@@ -408,7 +407,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Smart EV Charging</h4>
+                <h4>Parking Go App</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -418,12 +417,12 @@
             </div>
 		</div>	
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Europe Truck Journey Optimization</h4>
-                <p>Card</p>
+                <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -473,20 +472,6 @@
               </div>
             </div>
           </div>
-			
-		<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/UX_7.PNG" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>COST - Cloud Optimisation</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="img/portfolio/UX_7.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details_7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -525,6 +510,20 @@
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details_2.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+		<div class="col-lg-6 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/UX_7.PNG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>COST - Cloud Optimisation</h4>
+                <p>Web</p>
+                <div class="portfolio-links">
+                  <a href="img/portfolio/UX_7.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details_7.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
