--- a/portfolio-details_4.html
+++ b/portfolio-details_4.html
@@ -59,7 +59,7 @@
          <h1>IDMS – Intelligent Data Management System UX Case Study</h1><br>
 
   <div class="section">
-    <h2>📄 Project Overview</h2>
+    <h2>Project Overview</h2>
     <p>IDMS is a platform designed to empower administrators with complete control over user access across physical touchpoints like gates, kiosks, restricted areas, and counters. The system focuses on creating a secure, centralized, and user-friendly dashboard experience for efficient monitoring and configuration.</p>
   </div>
 
@@ -206,7 +206,6 @@
       <li>Quick filter panel with saved filters</li>
       <li>Live API performance charts and logs</li>
     </ul>
-    <img src="images/idms_ui_final.png" alt="Final UI Design">
   </div>
 
   <div class="section">
