--- a/portfolio-details_2.html
+++ b/portfolio-details_2.html
@@ -62,10 +62,11 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-        <h1>⚡ Bidgely – Your Power Saving App (UX Case Study)</h1>
+        <h1>Bidgely – Your Power Saving App (UX Case Study)</h1>
+        <br>
 
   <div class="section">
-    <h2>📄 Project Objectives</h2>
+    <h2>Project Objectives</h2>
     <p>
       Bidgely is an AI-powered energy management application for EV owners. It provides personalized charging suggestions based on real-time electricity tariffs, helping users reduce monthly bills while contributing to energy conservation. The aim was to build a simple yet efficient mobile app for smart EV charging.
     </p>
